# sbom-ops

./: .env.example  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SPEC.md  TASKS.md  pyproject.toml  resumeSession.txt
docs/: data-sources.md  implementation-roadmap.md  operations.md  priority-policy.md  use-cases.md  vex.md  workflow.md
docs/dependency-track/: README.md  api.md  operations.md  setup.md
examples/dependency-track/: docker-compose.yml
examples/sboms/: vulnerable-demo-updated.cdx.json  vulnerable-demo.cdx.json
scripts/: check_dt_openapi.sh  upload_bom.sh
src/sbom_ops/: __init__.py  cli.py  config.py
src/sbom_ops/clients/: dependency_track.py  epss.py  github.py  kev.py
src/sbom_ops/domain/: models.py  priority.py
src/sbom_ops/services/: orchestrator.py
src/sbom_ops/utils/: logging.py
tests/fixtures/: README.md  dependency-track-findings.json  dependency-track-projects.json  dependency-track-vulnerabilities.json  github-issues.json  kev.json
tests/unit/: test_config.py  test_dependency_track_client.py  test_external_clients.py  test_models.py  test_orchestrator.py  test_priority.py
