[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sbom-ops"
version = "0.1.0"
description = "Security-as-a-Task orchestration for Dependency-Track SBOM workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "sbom-ops contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
sbom-ops = "sbom_ops.cli:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/sbom_ops"]
